1.6.0-b3 - unreleased
=====================

1.6.0-b2 - 2007-03-05
=====================

  * Use new cmf:registerDirectory zcml directive and removed corresponding code
    from the initialize method.
    [hannosch]

1.6.0-b1 - 2007-02-27
=====================

  * version bumped to 1.6, 1.5 is now for archetypes 1.4 bugfixing
    whatever happens with 1.6.x shouldt have effects on AT 1.4
    [jensens]

1.5.0-a1 - 2007-02-06
=====================

  * Implemented PLIP 149
    [tomster]

1.4.1-final - 2006-09-15
========================

  * Converted usage of zLOG to new Python logging module.
    [hannosch]

  * Mime type links are now urllib quoted.  This fixes #682 
    (http://dev.plone.org/archetypes/ticket/682).
    [rocky]

1.4.0-final - 2006-06-16
========================

  * Use zope.contenttype in favor of zope.app.content_types if available.
    [hannosch]

1.4.0-beta2 - 2006-05-12
========================

  * Use zope.app.content_types in favor of OFS.content_types if available.
    [stefan]

  * Spring-cleaning of tests infrastructure.
    [hannosch]

1.4.0-beta1 - 2006-03-26
========================

  * fixed Plone #5027: MimeTypeRegistry.classify doesn't handle 
    "no mimetype" gracefully. Returns 'None' now.
    [jensens]

  * fixed http://dev.plone.org/archetypes/ticket/622
    [jensens] 

1.4.0-alpha02 - 2006-02-23
==========================

  * ensured that the key gotten back from windows_mimetypes.py existed
    mark says the best way is to examine each key to ensure its valid but
    would be slower.
    [runyaga]

  * removed odd archetypes 1.3 style version checking
    [jensens]

  * Removed BBB code for CMFCorePermissions import location.
    [hannosch]

  * removed deprecation warning for ToolInit.
    [jensens]

  * skip backward compatibility to the times where MTR where part of 
    PortalTransforms.
    [jensens]

1.3.8-final02 - 2006-01-15
==========================
